@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-26T16:13:58Z",
-  "count_outdated" : 329,
-  "uniques_outdated" : 13,
+  "timestamp" : "2022-05-28T00:48:34Z",
+  "count_outdated" : 331,
+  "uniques_outdated" : 14,
   "count" : 391,
   "uniques" : 20,
   "views" : [
-    {
-      "timestamp": "2022-05-14T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-16T00:00:00Z",
       "count": 19,
